# SoccerTracker

./: .gitignore  README.md
API/: main.py  pyproject.toml  requirements.txt
API/pipeline/: config.py  video_reader.py
