[project]
name = "soccertracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Gregor Johnson",email = "gregor.johnson@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
